# ragkitpy

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  __init__.py  pyproject.toml
examples/: basic_rag.py
ragkitpy/: __init__.py  chunker.py  embedder.py  loader.py  pipeline.py  vectorstore.py
tests/: test_embedder.py  test_loader.py  test_pipeline.py  test_vectorstore.py
