[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ragkitpy"
version = "0.1.0"
description = "A lightweight RAG pipeline toolkit powered by HuggingFace"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Srinath Dhumnor", email = "dhumnorsrinath06052002@gmail.com"}
]
keywords = ["rag", "retrieval-augmented-generation", "huggingface", "nlp", "llm", "ai"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.8"
dependencies = [
    "sentence-transformers>=2.2.0",
    "faiss-cpu>=1.7.0",
    "pypdf>=3.0.0",
    "numpy>=1.21.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-anyio"]

[project.urls]
Homepage = "https://github.com/SRINATH-GITHU/ragkitpy"
Repository = "https://github.com/SRINATH-GITHU/ragkitpy"
"Bug Tracker" = "https://github.com/SRINATH-GITHU/ragkitpy/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]